@@ -1,12 +1,16 @@
 package com.hanghai.kchtg.port.service;
 
 import com.hanghai.kchtg.common.entity.ApprovalStatus;
+import com.hanghai.kchtg.common.entity.InfrastructureHistory;
+import com.hanghai.kchtg.common.enums.ApprovalLevel;
+import com.hanghai.kchtg.common.enums.InfrastructureHistoryStatus;
+import com.hanghai.kchtg.common.repository.InfrastructureHistoryRepository;
+import com.hanghai.kchtg.gis.search.dto.InfrastructureType;
 import com.hanghai.kchtg.port.entity.Anchorage;
-import com.hanghai.kchtg.port.entity.ApprovalLog;
-import com.hanghai.kchtg.port.entity.ChangeLog;
 import com.hanghai.kchtg.port.repository.AnchorageRepository;
-import com.hanghai.kchtg.port.repository.ApprovalLogRepository;
-import com.hanghai.kchtg.port.repository.ChangeLogRepository;
+import com.hanghai.kchtg.security.SecurityUtils;
+import com.hanghai.kchtg.user.entity.User;
+import com.hanghai.kchtg.user.repository.UserRepository;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -14,8 +18,14 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 /**
  * Two-level approval service for Anchorage entity.
@@ -23,7 +33,9 @@ import java.util.UUID;
  * Level 2: CUC (Department) — PORT_AUTHORITY → APPROVED
  * Reject at any level → REJECTED
  * <p>
- * Entity type: "Anchorage" (for ApprovalLog + ChangeLog)
+ * Lịch sử thay đổi ghi vào bảng tập trung {@code infrastructure_history}
+ * (refType = ANCHORAGE_AREA) — cùng cấu trúc ghi/đọc với chuẩn Cảng biển
+ * sau migration V20260825162500 (bảng change_logs/approval_logs đã drop).
  * </p>
  */
 @Slf4j
@@ -32,8 +44,8 @@ import java.util.UUID;
 public class AnchorageApprovalService {
 
     private final AnchorageRepository anchorageRepository;
-    private final ChangeLogRepository changeLogRepository;
-    private final ApprovalLogRepository approvalLogRepository;
+    private final InfrastructureHistoryRepository historyRepository;
+    private final UserRepository userRepository;
 
     @Transactional
     public void approve(UUID id, String userId, String cap, String content) {
@@ -65,17 +77,18 @@ public class AnchorageApprovalService {
             throw new IllegalArgumentException("Cấp phê duyệt không hợp lệ: " + cap);
         }
 
-        ApprovalLog approvalLogRecord = ApprovalLog.builder()
-                .entityType("Anchorage")
-                .entityId(id.toString())
-                .decision("APPROVED")
-                .cap(cap)
-                .decidedBy(userId)
-                .decidedAt(LocalDateTime.now())
-                .build();
-        // [TẠM TẮT GHI LỊCH SỬ] Bảng approval_logs đã bị V20260825162500 drop; user yêu cầu Khu neo đậu không ghi lịch sử
-        // approvalLogRepository.save(approvalLogRecord);
         anchorageRepository.save(entity);
+
+        // Ghi sự kiện phê duyệt vào infrastructure_history (changedField = null để getHistory
+        // phân loại vào approvalLog), chuẩn Cảng biển sau migration V20260825162500.
+        historyRepository.save(InfrastructureHistory.builder()
+                .refId(entity.getId())
+                .refType(InfrastructureType.ANCHORAGE_AREA)
+                .approvalLevel("CANG_VU".equals(cap) ? ApprovalLevel.LEVEL_1 : ApprovalLevel.LEVEL_2)
+                .status(InfrastructureHistoryStatus.APPROVED)
+                .approvedBy(SecurityUtils.getCurrentUserId())
+                .reason("CANG_VU".equals(cap) ? "Phê duyệt cấp Cảng vụ" : "Phê duyệt cấp Cục")
+                .build());
 
         log.info("Anchorage [{}] approved by {} at level {}", id, userId, cap);
     }
@@ -89,18 +102,20 @@ public class AnchorageApprovalService {
                 ? ApprovalStatus.REJECTED_LEVEL2 : ApprovalStatus.REJECTED_LEVEL1);
         entity.setRejectionReason(reason);
 
-        ApprovalLog approvalLog = ApprovalLog.builder()
-                .entityType("Anchorage")
-                .entityId(id.toString())
-                .decision("REJECTED")
-                .cap(cap)
-                .reason(reason)
-                .decidedBy(userId)
-                .decidedAt(LocalDateTime.now())
-                .build();
-        // [TẠM TẮT GHI LỊCH SỬ] Bảng approval_logs đã bị V20260825162500 drop; user yêu cầu Khu neo đậu không ghi lịch sử
-        // approvalLogRepository.save(approvalLog);
         anchorageRepository.save(entity);
+
+        // Ghi sự kiện từ chối vào infrastructure_history (changedField = null để getHistory
+        // phân loại vào approvalLog), chuẩn Cảng biển sau migration V20260825162500.
+        String levelLabel = "CANG_VU".equals(cap) ? "Cảng vụ" : "Cục";
+        historyRepository.save(InfrastructureHistory.builder()
+                .refId(entity.getId())
+                .refType(InfrastructureType.ANCHORAGE_AREA)
+                .approvalLevel("CANG_VU".equals(cap) ? ApprovalLevel.LEVEL_1 : ApprovalLevel.LEVEL_2)
+                .status(InfrastructureHistoryStatus.REJECTED)
+                .approvedBy(SecurityUtils.getCurrentUserId())
+                .reason("Từ chối cấp " + levelLabel
+                        + (reason != null && !reason.isBlank() ? ": " + reason.trim() : ""))
+                .build());
 
         log.info("Anchorage [{}] rejected by {} at level {}: {}", id, userId, cap, reason);
     }
@@ -113,34 +128,80 @@ public class AnchorageApprovalService {
         String entityId = id.toString();
         String entityType = "Anchorage";
 
-        // [TẠM TẮT ĐỌC LỊCH SỬ] Bảng change_logs/approval_logs đã bị V20260825162500 drop — trả rỗng để không crash
-        List<ChangeLog> changeHistory = List.of();
-        List<ApprovalLog> approvalLogs = List.of();
+        List<InfrastructureHistory> list =
+                historyRepository.findByRefTypeAndRefIdOrderByApprovedDateDesc(InfrastructureType.ANCHORAGE_AREA, id);
 
-        return java.util.Map.of(
+        Set<UUID> userIds = list.stream()
+                .map(InfrastructureHistory::getApprovedBy)
+                .filter(Objects::nonNull)
+                .collect(Collectors.toSet());
+        Map<UUID, String> userNameMap = userIds.isEmpty() ? Collections.emptyMap() :
+                userRepository.findAllById(userIds).stream()
+                        .collect(Collectors.toMap(
+                                User::getId,
+                                u -> u.getFullName() != null && !u.getFullName().isBlank() ? u.getFullName() : u.getUsername(),
+                                (a, b) -> a));
+
+        List<Map<String, Object>> changeHistory = list.stream()
+                .filter(h -> h.getChangedField() != null)
+                .map(h -> {
+                    Map<String, Object> m = new HashMap<>();
+                    m.put("id", h.getId());
+                    m.put("entityType", entityType);
+                    m.put("entityId", entityId);
+                    m.put("fieldName", h.getChangedField());
+                    m.put("oldValue", h.getPreviousValue() != null ? h.getPreviousValue() : "");
+                    m.put("newValue", h.getNewValue() != null ? h.getNewValue() : "");
+                    m.put("changedBy", h.getApprovedBy() != null ? userNameMap.getOrDefault(h.getApprovedBy(), h.getApprovedBy().toString()) : "");
+                    m.put("changedAt", h.getApprovedDate());
+                    return m;
+                })
+                .toList();
+
+        List<Map<String, Object>> approvalLog = list.stream()
+                .filter(h -> h.getStatus() != null && h.getChangedField() == null)
+                .map(h -> {
+                    Map<String, Object> m = new HashMap<>();
+                    m.put("id", h.getId());
+                    m.put("entityType", entityType);
+                    m.put("entityId", entityId);
+                    m.put("decision", h.getStatus().name());
+                    m.put("reason", h.getReason() != null ? h.getReason() : "");
+                    m.put("decidedBy", h.getApprovedBy() != null ? userNameMap.getOrDefault(h.getApprovedBy(), h.getApprovedBy().toString()) : "");
+                    m.put("decidedAt", h.getApprovedDate());
+                    m.put("cap", h.getApprovalLevel() != null ? h.getApprovalLevel().name() : "");
+                    return m;
+                })
+                .toList();
+
+        return Map.of(
                 "entityId", entityId,
                 "entityType", entityType,
-                "currentApprovalStatus", entity.getApprovalStatus(),
+                "currentApprovalStatus", entity.getApprovalStatus() != null ? entity.getApprovalStatus().name() : "",
                 "changeHistory", changeHistory,
-                "approvalLog", approvalLogs
+                "approvalLog", approvalLog
         );
     }
 
     @Transactional(readOnly = true)
     public java.util.Map<String, Object> getAllHistory() {
         String entityType = "Anchorage";
-        List<ChangeLog> changeHistory = List.of(); // [TẠM TẮT] bảng change_logs đã bị V20260825162500 drop — trả rỗng
+        List<InfrastructureHistory> list =
+                historyRepository.findByRefTypeOrderByApprovedDateDesc(InfrastructureType.ANCHORAGE_AREA);
         java.util.Map<String, String> entityNames = new java.util.HashMap<>();
-        for (ChangeLog log : changeHistory) {
-            if (!entityNames.containsKey(log.getEntityId())) {
-                try {
-                    anchorageRepository.findById(UUID.fromString(log.getEntityId()))
-                        .ifPresent(a -> entityNames.put(log.getEntityId(), a.getAnchorageName()));
-                } catch (Exception e) {
-                    entityNames.put(log.getEntityId(), log.getEntityId());
+        for (InfrastructureHistory logItem : list) {
+            if (logItem.getRefId() != null) {
+                String refIdStr = logItem.getRefId().toString();
+                if (!entityNames.containsKey(refIdStr)) {
+                    try {
+                        anchorageRepository.findById(logItem.getRefId())
+                                .ifPresent(a -> entityNames.put(refIdStr, a.getAnchorageName()));
+                    } catch (Exception e) {
+                        entityNames.put(refIdStr, refIdStr);
+                    }
                 }
             }
         }
-        return java.util.Map.of("entityType", entityType, "changeHistory", changeHistory, "entityNames", entityNames);
+        return java.util.Map.of("entityType", entityType, "changeHistory", list, "entityNames", entityNames);
     }
 }
